<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="edu.illinois.cs465.fweestuff.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_search"
        android:name="edu.illinois.cs465.fweestuff.ui.search.Search"
        android:label="@string/title_search"
        tools:layout="@layout/search_fragment"/>

    <fragment
        android:id="@+id/navigation_my_events"
        android:name="edu.illinois.cs465.fweestuff.ui.myEvents.MyEvents"
        android:label="@string/title_my_events"
        tools:layout="@layout/my_events_fragment"/>

    <fragment
        android:id="@+id/navigation_settings"
        android:name="edu.illinois.cs465.fweestuff.ui.settings.Settings"
        android:label="@string/title_settings"
        tools:layout="@layout/settings_fragment"/>
</navigation>