<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="50dp"
    android:scrollbars="vertical"
    app:layout_constraintBottom_toTopOf="@+id/nav_view"
    app:layout_constraintTop_toTopOf="parent">
    <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/searchFragment"
        android:layout_marginHorizontal="20dp"
    android:layout_marginVertical="10dp"
        tools:context=".ui.search.Search">

        <EditText
        android:id="@+id/searchBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:textSize="22sp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:hint="@string/search_bar"/>

    <!--Filter Chips: Event Type-->
    <LinearLayout
        android:id="@+id/eventTypeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignLeft="@+id/searchBar"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/searchBar">
        <TextView
            android:id="@+id/eventTypeLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/event_type"/>
        <com.google.android.material.chip.ChipGroup
            android:id="@+id/eventTypeGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:layout_marginTop="5dp">
            <com.google.android.material.chip.Chip
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                app:chipBackgroundColor="@color/chip_state"
                android:textColor="@color/chip_state_text"
                android:text="@string/company_event_type"/>
            <com.google.android.material.chip.Chip
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:textColor="@color/chip_state_text"
                app:chipBackgroundColor="@color/chip_state"
                android:text="@string/rso_event_type"/>
            <com.google.android.material.chip.Chip
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:textColor="@color/chip_state_text"
                app:chipBackgroundColor="@color/chip_state"
                android:text="@string/campus_wide_event_type"/>
        </com.google.android.material.chip.ChipGroup>
    </LinearLayout>

    <!--Filter Chips: Giveaway Type-->
    <LinearLayout
        android:id="@+id/giveawayTypeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignLeft="@+id/eventTypeLayout"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/eventTypeLayout">
        <TextView
            android:id="@+id/giveawayTypeLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/giveaway_type"/>
        <com.google.android.material.chip.ChipGroup
            android:id="@+id/giveawayTypeGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:layout_marginTop="5dp">
            <com.google.android.material.chip.Chip
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:chipBackgroundColor="@color/chip_state"
                android:textColor="@color/chip_state_text"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:text="@string/food_type"/>
            <com.google.android.material.chip.Chip
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:chipBackgroundColor="@color/chip_state"
                android:textColor="@color/chip_state_text"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:text="@string/tshirt_type"/>
            <com.google.android.material.chip.Chip
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:chipBackgroundColor="@color/chip_state"
                android:textColor="@color/chip_state_text"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:text="@string/general_swag_type"/>
            <com.google.android.material.chip.Chip
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:chipBackgroundColor="@color/chip_state"
                android:textColor="@color/chip_state_text"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:text="@string/unique_items_type"/>
            <com.google.android.material.chip.Chip
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:chipBackgroundColor="@color/chip_state"
                android:textColor="@color/chip_state_text"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:text="@string/information_type"/>
            <com.google.android.material.chip.Chip
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:chipBackgroundColor="@color/chip_state"
                android:textColor="@color/chip_state_text"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:text="@string/stickers_type"/>
        </com.google.android.material.chip.ChipGroup>
    </LinearLayout>

    <!--Filter Chips: Event Day-->
    <LinearLayout
        android:id="@+id/eventDayLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignLeft="@+id/giveawayTypeLayout"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/giveawayTypeLayout">
        <TextView
            android:id="@+id/eventDayLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/event_day_type"/>
        <com.google.android.material.chip.ChipGroup
            android:id="@+id/eventDayGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:layout_marginTop="5dp">
            <com.google.android.material.chip.Chip
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:chipBackgroundColor="@color/chip_state"
                android:textColor="@color/chip_state_text"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:text="@string/today_type"/>
            <com.google.android.material.chip.Chip
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:chipBackgroundColor="@color/chip_state"
                android:textColor="@color/chip_state_text"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:text="@string/tomorrow_type"/>
            <com.google.android.material.chip.Chip
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:chipBackgroundColor="@color/chip_state"
                android:textColor="@color/chip_state_text"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:text="@string/this_week_type"/>
            <com.google.android.material.chip.Chip
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:chipBackgroundColor="@color/chip_state"
                android:textColor="@color/chip_state_text"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:text="@string/this_month_type"/>
        </com.google.android.material.chip.ChipGroup>
    </LinearLayout>

    <!--Spinners: Event Time-->
    <LinearLayout
        android:id="@+id/eventTimeGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignLeft="@+id/eventDayLayout"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/eventDayLayout">
        <TextView
            android:id="@+id/eventTimeLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/event_time_type"/>
        <LinearLayout
            android:id="@+id/eventTimeInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Spinner
                android:id="@+id/eventStartSpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="to"
                android:textSize="18sp"
                android:layout_marginHorizontal="5dp"/>
            <Spinner
                android:id="@+id/eventEndSpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </LinearLayout>

    <!--Distance Slider-->
    <LinearLayout
        android:id="@+id/distanceSliderGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/eventTimeGroup"
        android:layout_marginTop="15dp">

        <TextView
            android:id="@+id/distanceSliderLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/distance_slider_label"
            android:layout_marginBottom="5dp"/>

        <SeekBar
            android:id="@+id/distnaceSlider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:layout_marginRight="30dp"
            android:max="25"
            android:progress="0" />

        <TextView
            android:id="@+id/sliderPopup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <Button
        android:id="@+id/searchSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/distanceSliderGroup"
        android:text="@string/title_search"
        android:layout_marginVertical="20dp"
        android:layout_centerHorizontal="true"/>
</RelativeLayout>
</ScrollView>