<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingStart="@dimen/activity_horizontal_margin"
    android:paddingEnd="@dimen/activity_horizontal_margin"
    android:paddingTop="50dp"
    android:background="@android:color/white"
    tools:context=".LoginScreen">

    <ImageView
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_gravity="center"
        android:src="@drawable/login_logo" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/create_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:background="@android:color/transparent"
            android:clickable="true"
            android:focusable="true"
            android:onClick="onCreateAccount"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="@string/no_account_create_one_now"
            android:textColor="@color/primaryColor" />

        <TextView
            android:id="@+id/forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/create_account"
            android:background="@android:color/transparent"
            android:clickable="true"
            android:focusable="true"
            android:onClick="onForgotPassword"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="@string/forgot_password"
            android:textColor="@color/primaryColor"
            android:layout_alignParentStart="true" />

        <Button
            android:id="@+id/login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_gravity="right"
            android:onClick="onLogIn"
            android:text="@string/log_in" />
    </RelativeLayout>


</LinearLayout>