<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="15dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/mainContent">
            <ImageView
                android:layout_width="100dp"
            android:layout_height="match_parent"
            android:id="@+id/eventImage"
            android:src="@drawable/login_logo"
            android:layout_marginRight="10dp"
            />
            <LinearLayout
            android:id="@+id/contentLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_toRightOf="@+id/eventImage">
            <TextView
                android:id="@+id/eventName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/event_title"
                android:textColor="@color/primaryDarkColor"
                android:textStyle="bold"
                android:textSize="24dp"
                android:gravity="center"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">
                <TextView
                    android:id="@+id/eventDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/event_day"
                    android:textSize="20dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20dp"
                    android:text="\@"
                    android:layout_marginHorizontal="5dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/eventTime"
                    android:text="@string/event_time"
                    android:textSize="20dp"/>
            </LinearLayout>
            <TextView
                android:id="@+id/eventLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/event_location"
                android:textSize="20dp"
                android:gravity="center"
                />
        </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/mainContent"
            android:visibility="gone"
            android:id="@+id/buttonBar">
            <Button
                android:id="@+id/firstActionButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/more_info"
                android:layout_marginHorizontal="3dp"/>
            <Button
                android:id="@+id/secondActionButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/delete_event"
                android:layout_marginHorizontal="3dp"
                android:layout_weight="1"/>
        </LinearLayout>
    </RelativeLayout>

</com.google.android.material.card.MaterialCardView>
