<?xml version="1.0" encoding="utf-8"?>

    <com.google.android.material.card.MaterialCardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="15dp">
            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:id="@+id/eventImage"
                android:src="@drawable/login_logo"
                android:layout_marginRight="10dp"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_toRightOf="@+id/eventImage">
                <TextView
                    android:id="@+id/eventName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/event_title"
                    android:textColor="@color/primaryDarkColor"
                    android:textStyle="bold"
                    android:textSize="24dp"
                    android:gravity="center"
                    />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center">
                    <TextView
                        android:id="@+id/eventDate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/event_day"
                        android:textSize="20dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20dp"
                        android:text="\@"
                        android:layout_marginHorizontal="5dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/eventTime"
                        android:text="@string/event_time"
                        android:textSize="20dp"/>
                </LinearLayout>
                <TextView
                    android:id="@+id/eventLocation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/event_location"
                    android:textSize="20dp"
                    android:gravity="center"
                    />
            </LinearLayout>

        </RelativeLayout>
    </com.google.android.material.card.MaterialCardView>
